syntax = "proto3";

package pb;

import "session/session.proto";

option go_package = "github.com/Streamfair/streamfair_session_svc/pb/session";

message GetSessionRequest {
    string id = 1;
}

message GetSessionResponse {
    Session session = 1;
}
